<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivMiniPoster"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/film_poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher"
            app:shapeAppearanceOverlay="@style/RoundedSquare"/>


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxWidth="200dp"
            android:maxHeight="22dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/name"
            app:layout_constraintBottom_toTopOf="@id/tvGenre"
            app:layout_constraintStart_toEndOf="@id/ivMiniPoster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxWidth="200dp"
            android:maxHeight="20dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivMiniPoster"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@string/type" />

        <View
            android:id="@+id/vStar"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="27.81dp"
            android:layout_marginEnd="15.91dp"
            android:background="@drawable/ic_star"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>